# CommandGodWorkspace

./: CMakeLists.txt
.github/workflows/: build.yml
Main folder /: CMakeLists.txt
scr/: ManifestGenerator.h  main.cpp
src/: main.cpp
